--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
       # should build first and save the artifact
       - uses: actions/setup-node@v3
         with:
-          node-version: '14.x'
+          node-version: 18.14
       - uses: actions/setup-python@v2
         with:
           python-version: '3.8'
@@ -115,21 +115,10 @@ jobs:
           serverless deploy --stage ${{ matrix.environment }} --config ./serverless-fr.yml
           AWS_CLIENT_TIMEOUT=360000 serverless invoke --function fr_parser --stage ${{ matrix.environment }} --config ./serverless-fr.yml
           popd
-
-  test-cypress:
-    needs: [deploy]
-    runs-on: ubuntu-20.04
-    steps:
-      # Checkout the code
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          submodules: true
-      # Run the cypress tests
       - name: end-to-end tests
         uses: cypress-io/github-action@v5
         with:
           working-directory: solution/ui/e2e
-          config: baseUrl=${{ needs.deploy.outputs.url }}
+          config: baseUrl=${{ steps.deploy-regulations-site-server.outputs.url }}
         env:
           CYPRESS_DEPLOYING: true
