--- a/solution/ui/regulations/eregs-vite/package.json
+++ b/solution/ui/regulations/eregs-vite/package.json
@@ -16,9 +16,9 @@
     "vue-template-compiler": "^2.7.0"
   },
   "devDependencies": {
+    "@vitejs/plugin-vue2": "^2.2.0",
     "sass": "~1.32",
     "unplugin-vue-components": "^0.19.3",
-    "vite": "^2.9.13",
-    "vite-plugin-vue2": "^2.0.0"
+    "vite": "^3"
   }
 }
