--- a/solution/backend/serverless.yml
+++ b/solution/backend/serverless.yml
@@ -12,8 +12,8 @@ provider:
     DB_NAME: ${self:custom.settings.DB_NAME}
     DB_USER: ${self:custom.settings.USERNAME}
     DB_PASSWORD: ${ssm:/eregulations/db/password}
-    DB_HOST: !GetAtt [RDSResource, Endpoint.Address]
-    DB_PORT: !GetAtt [RDSResource, Endpoint.Port]
+    DB_HOST: ${ssm:/eregulations/db/host}
+    DB_PORT: ${ssm:/eregulations/db/port}
     GA_ID: ${ssm:/eregulations/http/google_analytics}
     HTTP_AUTH_USER: ${ssm:/eregulations/http/user}
     HTTP_AUTH_PASSWORD: ${ssm:/eregulations/http/password}
@@ -160,8 +160,8 @@ resources:
       Properties:
         GroupId: !Ref 'DBSecurityGroup'
         IpProtocol: tcp
-        FromPort: !GetAtt [RDSResource, Endpoint.Port]
-        ToPort: !GetAtt [RDSResource, Endpoint.Port]
+        FromPort: ${ssm:/eregulations/db/port}
+        ToPort: ${ssm:/eregulations/db/port}
         SourceSecurityGroupId: !Ref 'ServerlessSecurityGroup'
 
     DBSubnetGroup:
@@ -213,6 +213,7 @@ resources:
 
     RDSResource:
       Type: AWS::RDS::DBCluster
+      DeletionPolicy: Retain
       Properties:
         MasterUsername: ${self:custom.settings.USERNAME}
         MasterUserPassword: ${ssm:/eregulations/db/password}
@@ -229,6 +230,7 @@ resources:
 
     AuroraRDSInstance:
       Type: AWS::RDS::DBInstance
+      DeletionPolicy: Retain
       Properties:
         DBInstanceClass: db.r6g.large
         Engine: aurora-postgresql
