--- a/.github/workflows/deploy-experimental.yml
+++ b/.github/workflows/deploy-experimental.yml
@@ -119,8 +119,9 @@ jobs:
         run: |
           pushd solution/backend
           npm install serverless -g
+          npm install --save serverless-cloudformation-changesets -g
           npm install
-          serverless deploy --config ./serverless-experimental.yml --stage dev${PR} | tee output.log
+          serverless deploy --changeset --config ./serverless-experimental.yml --stage dev${PR} | tee output.log
           serverless invoke --config ./serverless-experimental.yml --function create_database --stage dev${PR}
           serverless invoke --config ./serverless-experimental.yml --function reg_core_migrate --stage dev${PR}
           serverless invoke --config ./serverless-experimental.yml --function create_su --stage dev${PR}
