--- a/solution/backend/package.json
+++ b/solution/backend/package.json
@@ -9,6 +9,7 @@
     "serverless-wsgi": "^1.7.8"
   },
   "dependencies": {
+    "serverless": "^3.27.0",
     "serverless-cloudfront-invalidate": "^1.12.2"
   }
 }
