--- a/solution/static-assets/package.json
+++ b/solution/static-assets/package.json
@@ -4,6 +4,7 @@
   "description": "Serverless config for eRegs core",
   "private": true,
   "dependencies": {
+    "serverless": "^3.27.0",
     "serverless-cloudfront-invalidate": "^1.3.0",
     "serverless-python-requirements": "^5.3.1",
     "serverless-s3-sync": "^1.15.0"
