--- a/solution/backend/serverless.yml
+++ b/solution/backend/serverless.yml
@@ -217,3 +217,4 @@ plugins:
   - serverless-wsgi
   - serverless-go-plugin
   - serverless-cloudfront-invalidate
+  - serverless-cloudformation-changesets
