--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -68,9 +68,8 @@ jobs:
         run: |
           pushd solution/backend
           npm install serverless -g
-          npm install serverless-cloudformation-changesets-v3 -g
           npm install
-          serverless deploy --stage ${{ matrix.environment }} --param="changeset" | tee output.log
+          serverless deploy --stage ${{ matrix.environment }} | tee output.log
           serverless invoke --function reg_core_migrate --stage ${{ matrix.environment }}
           serverless invoke --function create_su --stage ${{ matrix.environment }}
           echo "::set-output name=url::$(cat output.log | grep -m1 'ANY -' | cut -c 9-)"
