--- a/solution/ui/regulations/eregs-component-lib/package.json
+++ b/solution/ui/regulations/eregs-component-lib/package.json
@@ -4,16 +4,18 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "build:components": "LIB_NAME=components vite build",
+    "build:main": "LIB_NAME=main vite build",
+    "build": "npm run build:components && npm run build:main"
   },
   "dependencies": {
     "vite-plugin-css-injected-by-js": "^3.0.0",
-    "vue": "^2.7.10"
+    "vue": "^2.7.10",
+    "vuetify": "^2.6.14"
   },
   "devDependencies": {
     "@vitejs/plugin-vue2": "^2.2.0",
+    "unplugin-vue-components": "^0.23.0",
     "vite": "^4.1.0"
   }
 }
