--- a/solution/ui/regulations/eregs-component-lib/package.json
+++ b/solution/ui/regulations/eregs-component-lib/package.json
@@ -9,6 +9,7 @@
     "build": "npm run build:components && npm run build:main"
   },
   "dependencies": {
+    "lodash": "^4.17.21",
     "vite-plugin-css-injected-by-js": "^3.0.0",
     "vue": "^2.7.10",
     "vuetify": "^2.6.14"
