--- a/solution/backend/serverless-experimental.yml
+++ b/solution/backend/serverless-experimental.yml
@@ -7,9 +7,9 @@ provider:
   region: us-east-1
   iam:
     role: LambdaFunctionRole
-  # logs:
-  #   restApi:
-  #     role: !GetAtt ApiGatewayRole.Arn
+  logs:
+    restApi:
+      role: !GetAtt ApiGatewayRole.Arn
   lambdaHashingVersion: '20201221'
   environment:
     DB_NAME: ${self:custom.settings.DB_NAME}
