--- a/solution/backend/serverless-experimental.yml
+++ b/solution/backend/serverless-experimental.yml
@@ -9,7 +9,7 @@ provider:
     role: LambdaFunctionRole
   logs:
     restApi:
-      role: !GetAtt ApiGatewayRole.Arn
+      role: arn:aws:iam::910670052382:role/delegatedadmin/developer/cmcs-eregs-site-dev714-ApiGatewayRole-IYZCJNJA82CC
   lambdaHashingVersion: '20201221'
   environment:
     DB_NAME: ${self:custom.settings.DB_NAME}
