--- a/solution/ui/regulations/eregs-component-lib/package.json
+++ b/solution/ui/regulations/eregs-component-lib/package.json
@@ -5,7 +5,9 @@
   "type": "module",
   "scripts": {
     "build:components": "LIB_NAME=components vite build",
+    "watch-build:components": "LIB_NAME=components vite build --watch",
     "build:main": "LIB_NAME=main vite build",
+    "watch-build:main": "LIB_NAME=main vite build --watch",
     "build": "npm run build:components && npm run build:main"
   },
   "dependencies": {
@@ -16,6 +18,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue2": "^2.2.0",
+    "fast-glob": "^3.2.12",
     "unplugin-vue-components": "^0.23.0",
     "vite": "^4.1.0"
   }
