--- a/solution/ui/regulations/eregs-component-lib/package.json
+++ b/solution/ui/regulations/eregs-component-lib/package.json
@@ -11,7 +11,9 @@
     "build": "npm run build:components && npm run build:main"
   },
   "dependencies": {
+    "chokidar": "^3.5.3",
     "lodash": "^4.17.21",
+    "shelljs": "^0.8.5",
     "vite-plugin-css-injected-by-js": "^3.0.0",
     "vue": "^2.7.10",
     "vuetify": "^2.6.14"
