--- a/solution/ui/regulations/eregs-component-lib/package.json
+++ b/solution/ui/regulations/eregs-component-lib/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "chokidar": "^3.5.3",
+    "localforage": "^1.10.0",
     "lodash": "^4.17.21",
     "shelljs": "^0.8.5",
     "vite-plugin-css-injected-by-js": "^3.0.0",
