--- a/solution/ui/regulations/eregs-vite/package.json
+++ b/solution/ui/regulations/eregs-vite/package.json
@@ -9,11 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "localforage": "^1.10.0",
     "lodash": "^4.17.21",
     "vue": "^2.7.10",
     "vue-router": "^3.2.0",
-    "vuetify": "^2.6.10",
-    "vue-template-compiler": "^2.7.0"
+    "vue-template-compiler": "^2.7.0",
+    "vuetify": "^2.6.10"
   },
   "devDependencies": {
     "@vitejs/plugin-vue2": "^2.2.0",
