chore: update node engine version to remove error during build

--- a/solution/ui/regulations/package.json
+++ b/solution/ui/regulations/package.json
@@ -13,7 +13,7 @@
   "license": "CC",
   "private": true,
   "engines": {
-    "node": "15"
+    "node": ">=16.0.0"
   },
   "dependencies": {
     "@cmsgov/design-system": "^2.5.0",
