--- a/solution/backend/serverless-experimental.yml
+++ b/solution/backend/serverless-experimental.yml
@@ -10,9 +10,8 @@ provider:
   logs:
     restApi:
       level: INFO
-      role: "arn:aws:iam::aws:policy/service-role/AmazonAPIGatewayPushToCloudWatchLogs"
       roleManagedExternally: true
-      #role: !GetAtt ApiGatewayLoggingRole.Arn
+      role: !GetAtt ApiGatewayLoggingRole.Arn
   lambdaHashingVersion: '20201221'
   environment:
     DB_NAME: ${self:custom.settings.DB_NAME}
@@ -112,27 +111,27 @@ resources:
 
   Resources:
 
-    # ApiGatewayLoggingRole:
-    #   Type: AWS::IAM::Role
-    #   Properties:
-    #     Path: ${ssm:/account_vars/iam/path}
-    #     AssumeRolePolicyDocument:
-    #       Version: '2012-10-17'
-    #       Statement:
-    #         - Effect: Allow
-    #           Principal:
-    #             Service:
-    #               - apigateway.amazonaws.com
-    #           Action: sts:AssumeRole
-    #     PermissionsBoundary:
-    #       Fn::Join:
-    #         - ''
-    #         - - 'arn:aws:iam::'
-    #           - Ref: AWS::AccountId
-    #           - ':policy'
-    #           - ${ssm:/account_vars/iam/permissions_boundary_policy}
-    #     ManagedPolicyArns:
-    #       - arn:aws:iam::aws:policy/service-role/AmazonAPIGatewayPushToCloudWatchLogs
+    ApiGatewayLoggingRole:
+      Type: AWS::IAM::Role
+      Properties:
+        Path: ${ssm:/account_vars/iam/path}
+        AssumeRolePolicyDocument:
+          Version: '2012-10-17'
+          Statement:
+            - Effect: Allow
+              Principal:
+                Service:
+                  - apigateway.amazonaws.com
+              Action: sts:AssumeRole
+        PermissionsBoundary:
+          Fn::Join:
+            - ''
+            - - 'arn:aws:iam::'
+              - Ref: AWS::AccountId
+              - ':policy'
+              - ${ssm:/account_vars/iam/permissions_boundary_policy}
+        ManagedPolicyArns:
+          - arn:aws:iam::aws:policy/service-role/AmazonAPIGatewayPushToCloudWatchLogs
 
     LambdaFunctionRole:
       Type: AWS::IAM::Role
