--- a/solution/static-assets/serverless.yml
+++ b/solution/static-assets/serverless.yml
@@ -104,12 +104,22 @@ resources:
                 Bool:
                   aws:SecureTransport: false
         Bucket: !Ref AssetsBucket
-
+    CloudFrontWebACL:
+      Type: AWS::WAFv2::WebACL
+        DefaultAction: 
+          Allow: {}
+      Properties:
+        Scope: REGIONAL
+        VisibilityConfig:
+          SampledRequestsEnabled: true
+          CloudWatchMetricsEnabled: true
+          MetricName: eregs-${self:custom.stage}-metric
     CloudFrontDistribution:
       Type: AWS::CloudFront::Distribution
       Properties:
         DistributionConfig:
           Comment: CloudFront Distro for the static website hosted in S3
+          WebACLId: !Ref CloudFrontWebACL
           Aliases:
             - Ref: AWS::NoValue
           Origins:
