arn needs global despite documentaiton on aws

--- a/solution/static-assets/serverless.yml
+++ b/solution/static-assets/serverless.yml
@@ -110,7 +110,7 @@ resources:
         Name: eregs-${self:custom.stage}-cloudfront-ACL
         DefaultAction: 
           Allow: {}
-        Scope: REGIONAL
+        Scope: GLOBAL
         VisibilityConfig:
           SampledRequestsEnabled: true
           CloudWatchMetricsEnabled: true
