--- a/solution/backend/serverless-experimental.yml
+++ b/solution/backend/serverless-experimental.yml
@@ -125,7 +125,7 @@ resources:
         Deployment
         MethodSettings:
           - ResourcePath: /*
-            HttpMethod: "*"
+            HttpMethod: *
             LoggingLevel: INFO
         AccessLogSetting:
           DestinationArn: !GetAtt MyLogGroup.Arn
