--- a/solution/backend/serverless.yml
+++ b/solution/backend/serverless.yml
@@ -53,6 +53,9 @@ custom:
     - distributionId: ${cf:cmcs-eregs-static-assets-${self:custom.stage}.CloudFrontDistributionId}
       items:
         - "/*"
+  associateWaf:
+    name: ${self:resources.Resources.WAFRegionalWebACL.Properties.Name}
+    version: V2 #(optional) Regional | V2
 
 functions:
   reg_site:
@@ -86,9 +89,8 @@ functions:
 
 
 resources:
-
   Resources:
-
+    WAFRegionalWebACL: ${file(aws_resources/waf.yml):WAFRegionalWebACL}
     LambdaFunctionRole:
       Type: AWS::IAM::Role
       Properties:
@@ -248,3 +250,4 @@ plugins:
   - serverless-wsgi
   - serverless-go-plugin
   - serverless-cloudfront-invalidate
+  - serverless-associate-waf
