--- a/solution/backend/serverless.yml
+++ b/solution/backend/serverless.yml
@@ -3,12 +3,14 @@ variablesResolutionMode: 20210326
 
 provider:
   name: aws
-  logs:
-    restApi: true
   runtime: python3.8
   region: us-east-1
   iam:
     role: LambdaFunctionRole
+  logs:
+    restApi:
+      level: INFO
+      roleManagedExternally: true
   lambdaHashingVersion: '20201221'
   environment:
     DB_NAME: ${self:custom.settings.DB_NAME}
