change serverless so it can associate it to the api gateway

--- a/solution/backend/aws_resources/waf.yml
+++ b/solution/backend/aws_resources/waf.yml
@@ -3,7 +3,7 @@
 WAFRegionalWebACL:
   Type: "AWS::WAFv2::WebACL"
   Properties:
-    Name: ${self:custom.stage}-cmcs-eregs-site
+    Name: ${self:custom.stage}-cmcs-eregs-waf
     Scope: REGIONAL
     Description: WAF Regional Web ACL
     DefaultAction:
