--- a/solution/backend/aws_resources/waf.yml
+++ b/solution/backend/aws_resources/waf.yml
@@ -1,15 +1,18 @@
-# CloudFormation Resources
-# Create WAF Regional Web ACL with Rate-Based Rule to Prevent HTTP Flood DDoS Attack
 WAFRegionalWebACL:
   Type: "AWS::WAFv2::WebACL"
   Properties:
-    Name: ${self:custom.stage}-cmcs-eregs-ApiGwWebACL
+    Name: APIGateway-eregs-allow-usa-plus-territories-${self:custom.stage}
     Scope: REGIONAL
     Description: WAF Regional Web ACL
     DefaultAction:
       Block: {}
+    VisibilityConfig:
+      SampledRequestsEnabled: true
+      CloudWatchMetricsEnabled: true
+      MetricName: ApiGateway-eregs-allow-usa-plus-territories
+
     Rules:
-        Name: eregs-allow-usa-plus-territories
+        Name: eregs-allow-usa-plus-territories-rule
         Priority: 0
         Statement:
           GeoMatchStatement:
@@ -26,9 +29,4 @@ WAFRegionalWebACL:
         VisibilityConfig:
           SampledRequestsEnabled: true
           CloudWatchMetricsEnabled: true
-          MetricName: "WafWebAcl"
-    VisibilityConfig:
-      SampledRequestsEnabled: true
-      CloudWatchMetricsEnabled: true
-      MetricName: "eregs-allow-usa-plus-territories"
-
+          MetricName: eregs-allow-usa-plus-territories-metric
