--- a/.github/workflows/deploy-experimental.yml
+++ b/.github/workflows/deploy-experimental.yml
@@ -125,7 +125,7 @@ jobs:
           serverless invoke --config ./serverless-experimental.yml --function reg_core_migrate --stage dev${PR}
           serverless invoke --config ./serverless-experimental.yml --function create_su --stage dev${PR}
           serverless invoke --config ./serverless-experimental.yml --function populate_content --stage dev${PR}
-          echo "::set-output name=url::$(cat output.log | grep -m1 'ANY -' | cut -c 9-)"
+          echo "{url}={$(cat output.log | grep -m1 'ANY -' | cut -c 9-)}" >> $GITHUB_OUTPUT
           popd
 
   build-and-deploy-vue:
