--- a/solution/backend/serverless.yml
+++ b/solution/backend/serverless.yml
@@ -57,6 +57,9 @@ custom:
     - distributionId: ${cf:cmcs-eregs-static-assets-${self:custom.stage}.CloudFrontDistributionId}
       items:
         - "/*"
+  associateWaf:
+    name: APIGateway-eregs-allow-usa-plus-territories-${self:custom.stage}
+    version: V2
 
 functions:
   reg_site:
@@ -90,9 +93,8 @@ functions:
 
 
 resources:
-
   Resources:
-
+    WAFRegionalWebACL: ${file(aws_resources/waf.yml):WAFRegionalWebACL}
     LambdaFunctionRole:
       Type: AWS::IAM::Role
       Properties:
@@ -252,3 +254,4 @@ plugins:
   - serverless-wsgi
   - serverless-go-plugin
   - serverless-cloudfront-invalidate
+  - serverless-associate-waf
