EREGCSC-1689: adding rule for firewall (#723)
* adding rule

* indention fix

* yml file fix

* remove action

* d

--- a/solution/static-assets/serverless.yml
+++ b/solution/static-assets/serverless.yml
@@ -115,6 +115,25 @@ resources:
           SampledRequestsEnabled: true
           CloudWatchMetricsEnabled: true
           MetricName: eregs-${self:custom.stage}-cloudfront-metric
+        Rules:
+          - Name: eregs-allow-usa-plus-territories-rule-cf
+            Priority: 0
+            Statement:
+              GeoMatchStatement:
+                CountryCodes:
+                  - GU
+                  - PR
+                  - US
+                  - UM
+                  - VI
+                  - MP
+                  - AS
+            Action:
+              Allow: {}
+            VisibilityConfig:
+              SampledRequestsEnabled: true
+              CloudWatchMetricsEnabled: true
+              MetricName: eregs-allow-usa-plus-territories-metric-CLOUDFRONT
     CloudFrontDistribution:
       Type: AWS::CloudFront::Distribution
       Properties:
