--- a/.github/workflows/parser-checks.yml
+++ b/.github/workflows/parser-checks.yml
@@ -5,9 +5,9 @@ on:
     types: [ opened, synchronize, reopened ]
     paths:
       - 'solution/parser/**'
-  push:
-    branches:
-      - main
+  # push:
+  #   branches:
+  #     - main
 
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 
@@ -33,7 +33,7 @@ jobs:
   
     # set up build cache
     - name: Set up build cache
-      uses: actions/cache@v2
+      uses: actions/cache@v3
       with:
         path: |
           ~/go/pkg/mod
@@ -45,12 +45,12 @@ jobs:
 
       # Run go fmt on the code
     - name: Run gofmt
-      uses: Jerome1337/gofmt-action@v1.0.4
+      uses: Jerome1337/gofmt-action@v1.0.5
       with:
         gofmt-path: './solution/parser/${{ matrix.dir }}'
         gofmt-flags: '-l -d'
 
-    - uses: dominikh/staticcheck-action@v1.2.0
+    - uses: dominikh/staticcheck-action@v1.3.0
       with:
         version: "2022.1"
         install-go: false
