--- a/.github/workflows/parser-checks.yml
+++ b/.github/workflows/parser-checks.yml
@@ -3,8 +3,8 @@ name: Parser Checks
 on:
   pull_request:
     types: [ opened, synchronize, reopened ]
-    paths:
-      - 'solution/parser/**'
+    # paths:
+    #   - 'solution/parser/**'
   # push:
   #   branches:
   #     - main
