--- a/.github/workflows/parser-checks.yml
+++ b/.github/workflows/parser-checks.yml
@@ -50,11 +50,11 @@ jobs:
         gofmt-path: './solution/parser/${{ matrix.dir }}'
         gofmt-flags: '-l -d'
 
-    - uses: dominikh/staticcheck-action@v1.3.0
-      with:
-        version: "2022.1"
-        install-go: false
-        working-directory: "./solution/parser/${{ matrix.dir }}"
+    # - uses: dominikh/staticcheck-action@v1.3.0
+    #   with:
+    #     version: "2022.1"
+    #     install-go: false
+    #     working-directory: "./solution/parser/${{ matrix.dir }}"
 
     # Run lint on the code
     - name: Run lint
