--- a/.github/workflows/parser-checks.yml
+++ b/.github/workflows/parser-checks.yml
@@ -31,17 +31,17 @@ jobs:
       with:
         go-version: '^1.16' # The Go version to download (if necessary) and use.
   
-    # # set up build cache
-    # - name: Set up build cache
-    #   uses: actions/cache@v3
-    #   with:
-    #     path: |
-    #       ~/go/pkg/mod
-    #       ~/go/bin
-    #       ~/.cache/go-build
-    #     key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
-    #     restore-keys: |
-    #       ${{ runner.os }}-go-
+    # set up build cache
+    - name: Set up build cache
+      uses: actions/cache@v3
+      with:
+        path: |
+          ~/go/pkg/mod
+          ~/go/bin
+          ~/.cache/go-build
+        key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+        restore-keys: |
+          ${{ runner.os }}-go-
 
       # Run go fmt on the code
     - name: Run gofmt
@@ -50,11 +50,11 @@ jobs:
         gofmt-path: './solution/parser/${{ matrix.dir }}'
         gofmt-flags: '-l -d'
 
-    # - uses: dominikh/staticcheck-action@v1.3.0
-    #   with:
-    #     version: "2022.1"
-    #     install-go: false
-    #     working-directory: "./solution/parser/${{ matrix.dir }}"
+    - uses: dominikh/staticcheck-action@v1.3.0
+      with:
+        version: "2022.1.3"
+        install-go: false
+        working-directory: "./solution/parser/${{ matrix.dir }}"
 
     # Run lint on the code
     - name: Run lint
