--- a/.github/workflows/parser-checks.yml
+++ b/.github/workflows/parser-checks.yml
@@ -53,7 +53,7 @@ jobs:
     - uses: dominikh/staticcheck-action@v1.3.0
       with:
         version: "2022.1.3"
-        install-go: false
+        #install-go: false
         working-directory: "./solution/parser/${{ matrix.dir }}"
 
     # Run lint on the code
