--- a/.github/workflows/parser-checks.yml
+++ b/.github/workflows/parser-checks.yml
@@ -3,11 +3,11 @@ name: Parser Checks
 on:
   pull_request:
     types: [ opened, synchronize, reopened ]
-    # paths:
-    #   - 'solution/parser/**'
-  # push:
-  #   branches:
-  #     - main
+    paths:
+      - 'solution/parser/**'
+  push:
+    branches:
+      - main
 
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 
@@ -53,7 +53,6 @@ jobs:
     - uses: dominikh/staticcheck-action@v1.3.0
       with:
         version: "2022.1.3"
-        #install-go: false
         working-directory: "./solution/parser/${{ matrix.dir }}"
 
     # Run lint on the code
