chore: upgrade eslint-plugin-vue for 2.7 support

--- a/solution/ui/regulations/.eslintrc.json
+++ b/solution/ui/regulations/.eslintrc.json
@@ -15,6 +15,13 @@
     },
     "plugins": ["vue"],
     "rules": {
-        "vue/order-in-components": "off"
+        "vue/order-in-components": "off",
+        "vue/no-unsupported-features": [
+            "error",
+            {
+                "version": "^2.7.0",
+                "ignores": []
+            }
+        ]
     }
 }
