New indexing method for reg_search

--- a/solution/Makefile
+++ b/solution/Makefile
@@ -160,6 +160,12 @@ python.unittest:
 
 python.shell:
 	docker-compose exec regulations python manage.py shell
+
+python.makemigrations:
+	docker-compose exec regulations python manage.py makemigrations
+
+python.migrate:
+	docker-compose exec regulations python manage.py migrate
 	
 local.seed:
 	docker-compose exec regulations python manage.py loaddata resources.category.json
