Syncing up github actions (#749)
* updates to actions

* outdated event

* updating node for remove steps

--- a/.github/workflows/remove.yml
+++ b/.github/workflows/remove.yml
@@ -12,17 +12,17 @@ jobs:
   remove:
     runs-on: ubuntu-20.04
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           submodules: true
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@v3
         with:
-          node-version: '14.x'
-      - uses: actions/setup-python@v2
+          node-version: 18.14
+      - uses: actions/setup-python@v4
         with:
           python-version: '3.8'
       - name: Configure AWS credentials for GitHub Actions
-        uses: aws-actions/configure-aws-credentials@v1
+        uses: aws-actions/configure-aws-credentials@v2
         with:
           role-to-assume: ${{ secrets.AWS_OIDC_ROLE_TO_ASSUME }}
           aws-region: us-east-1
